# prompt

./: .promptignore  AI Coding Tools - Sheet1.csv  Cargo.toml  README.md  install_prompt.sh
.prompt/: .promptignore  system_prompt_addon.txt  terminal_history.json
config/: system_prompt.txt
prompt-generator-launcher/: package-lock.json  package.json  prompt-generator-launcher-0.1.0.vsix  prompt-generator-launcher-0.1.4.vsix  tsconfig.json
prompt-generator-launcher/src/: extension.js  extension.ts
src/: app.rs  code_indexer.rs  command_runner.rs  file_item.rs  file_tree.rs  main.rs  prompt_builder.rs  remote.rs  token_count.rs
