[package]
name = "prompt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.31"
egui = "0.31"
rfd = "0.10"
globset = "0.4"
reqwest = { version = "0.12.12", features = ["blocking"] }
html2text = "0.14.0"
num-format = "0.4.4"
serde = "1.0.219"
serde_json = "1.0.140"
async-openai = "0.28.1"
tokio = "1.44.2"
shell-words = "1.1"
